Fixed alignment issue with 'process' button on transaction list

--- a/sigmabank/src/css/CreateAccount.css
+++ b/sigmabank/src/css/CreateAccount.css
@@ -48,5 +48,5 @@ justify-content: center;
 
 .processingSection{
 display: flex;
-justify-items: center;
+justify-content: center;
 }
